// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateUrlReport should generate latest report for a valid url 1`] = `
Object {
  "codescan": Object {
    "data": "codescanalerts.json",
  },
  "dependabot": Object {
    "data": "dependabotalerts.json",
  },
  "http": Object {
    "data": "http.json",
  },
  "lhr": Object {
    "audits": Object {},
    "categories": Object {},
    "fetchTime": undefined,
    "finalUrl": undefined,
    "requestedUrl": undefined,
    "runWarnings": undefined,
  },
  "nmap": Object {
    "data": "nmapvuln.json",
  },
  "nuclei": Array [],
  "scores": Object {
    "codescan": 0,
    "dependabot": 0,
    "http": 0,
    "lhr": 0,
    "nmap": 0,
    "nuclei": 0,
    "screenshot": 0,
    "testssl": 0,
    "thirdparties": 0,
    "updownio": 0,
    "url": 0,
    "wappalyzer": 0,
    "zap": 0,
  },
  "screenshot": false,
  "testssl": Object {
    "data": "testssl.json",
  },
  "thirdparties": Object {
    "data": "thirdparties.json",
  },
  "updownio": Object {
    "data": "updownio.json",
  },
  "url": "https://www.test.com",
  "wappalyzer": Object {
    "data": "wappalyzer.json",
  },
  "zap": Object {
    "data": "zap.json",
    "site": undefined,
  },
}
`;

exports[`generateUrlReport should skip scans if some not found 1`] = `
Object {
  "codescan": Object {
    "data": "codescanalerts.json",
  },
  "dependabot": null,
  "http": null,
  "lhr": null,
  "nmap": null,
  "nuclei": null,
  "scores": Object {
    "codescan": 0,
    "dependabot": 0,
    "http": 0,
    "lhr": 0,
    "nmap": 0,
    "nuclei": 0,
    "screenshot": 0,
    "testssl": 0,
    "thirdparties": 0,
    "updownio": 0,
    "url": 0,
    "wappalyzer": 0,
    "zap": 0,
  },
  "screenshot": false,
  "testssl": null,
  "thirdparties": null,
  "updownio": null,
  "url": "https://www.test.com",
  "wappalyzer": Object {
    "data": "wappalyzer.json",
  },
  "zap": null,
}
`;
